crates/wac-parser/tests/resolution/fail/export-needs-with.wac
package test:comp;

let i = new foo:bar {};
export i;
